# ai-financial-tool

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Documentation/: Tasks.md
docs/: index.md
docs/guides/: development.md  getting-started.md  installation.md
docs/source/: conf.py  index.rst
scripts/: dev.py
src/ai_financial_tool/: __init__.py  main.py
src/new_python_project/: __init__.py  main.py
tests/: __init__.py  test_main.py
